# gluon-actor

./: Cargo.toml  Makefile  build-in-docker.sh  build.rs  docker-compose.yml
keys/: account.nk  account.txt  module.nk  module.txt
src/: common.rs  delegator.rs  executor.rs  initial_pinner.rs  lib.rs  pinner.rs  portal.rs
src/common/: execution_info.rs  key_generation.rs  task_info.rs  utils.rs
src/delegator/: dump_methods.rs  executor_info.rs  handler.rs  key_gen.rs  sign.rs  verifier.rs
src/delegator/key_gen/: candidates.rs  initial_pinner_info.rs  observers.rs  ra.rs  store_item.rs
src/delegator/key_gen/observers/: client_observer.rs
src/delegator/sign/: observers.rs  ra.rs  store_item.rs
src/delegator/sign/observers/: client_observer.rs
src/executor/: handler.rs  key_gen.rs  sign.rs  store_item.rs
src/initial_pinner/: handler.rs  store_item.rs
src/pinner/: handler.rs
src/portal/: layer1_events.rs
